@@ -1,3 +1,9 @@
+Fri Nov 10 05:47:15 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * docs/bczar/bczar.html
+        
+          Updates to release script documentation.
+
 Thu Nov  9 20:07:42 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * ace/Service_Config.cpp:
